objects/AutomatedRenewalsConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SFDC-3186 Hierarchical custom setting to store config settings for Automated Renewals creation process.</description>
    <fields>
        <fullName>DoNotTriggerRenewals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Check this to stop the trigger(marking an opp 6W to 6WP) for Renewals creation</description>
        <inlineHelpText>Check this to stop the trigger(marking an opp 6W to 6WP) for Renewals creation</inlineHelpText>
        <label>Do Not Trigger Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogEmailRecipient__c</fullName>
        <description>SFDC-3186 Email id with which batch logs should be shared. User/Profile specific records should not use this.</description>
        <inlineHelpText>Enter recipient email to whom renewal batch logs should be sent. User/Profile specific records should not use this.</inlineHelpText>
        <label>Log Email Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RenewalsBatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>SFDC-3186 Size of each batch when running renewals scheduled jobs.</description>
        <inlineHelpText>Set this only for org default record. User/Profile specific records should not use this.</inlineHelpText>
        <label>RenewalsBatchSize</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Automated Renewals Config</label>
    <listViews>
        <fullName>RenewalsBatchConfigs</fullName>
        <columns>NAME</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>DoNotTriggerRenewals__c</columns>
        <filterScope>Everything</filterScope>
        <label>Renewals Batch Configs</label>
    </listViews>
</CustomObject>